Update tinh nang Lesson, Course